--- a/111502_SystemCode(18)/app/src/main/res/layout/activity_main_c.xml
+++ b/111502_SystemCode(18)/app/src/main/res/layout/activity_main_c.xml
@@ -46,6 +46,7 @@
         android:id="@+id/imageButtonToPageJC"
         android:layout_width="68dp"
         android:layout_height="69dp"
+        android:onClick="CJonClick"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.749"
@@ -59,6 +60,7 @@
         android:id="@+id/imageButtonToPageOC"
         android:layout_width="68dp"
         android:layout_height="69dp"
+        android:onClick="COonClick"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.994"
@@ -72,6 +74,7 @@
         android:id="@+id/imageButtonToPageHC"
         android:layout_width="68dp"
         android:layout_height="69dp"
+        android:onClick="CHonClick"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -85,6 +88,7 @@
         android:id="@+id/imageButtonToPageAC"
         android:layout_width="68dp"
         android:layout_height="69dp"
+        android:onClick="CAonClick"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.017"
@@ -98,6 +102,7 @@
         android:id="@+id/imageButtonToPageBC"
         android:layout_width="68dp"
         android:layout_height="69dp"
+        android:onClick="CBonClick"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.25"
@@ -111,6 +116,7 @@
         android:id="@+id/textViewToPageBC"
         android:layout_width="49dp"
         android:layout_height="18dp"
+        android:onClick="CBonClick"
         android:text="保健區"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -123,6 +129,7 @@
         android:id="@+id/textViewToPageJC"
         android:layout_width="50dp"
         android:layout_height="15dp"
+        android:onClick="CJonClick"
         android:text="領養區"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -135,6 +142,7 @@
         android:id="@+id/textViewToPageAC"
         android:layout_width="63dp"
         android:layout_height="16dp"
+        android:onClick="CAonClick"
         android:text="動態消息"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -147,6 +155,7 @@
         android:id="@+id/textViewToPageOC"
         android:layout_width="63dp"
         android:layout_height="16dp"
+        android:onClick="COonClick"
         android:text="個人資料"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -159,6 +168,7 @@
         android:id="@+id/textViewToPageHC"
         android:layout_width="63dp"
         android:layout_height="16dp"
+        android:onClick="CHonClick"
         android:text="殯葬服務"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
