--- a/111502_SystemCode(18)/app/src/main/res/layout/activity_main_e.xml
+++ b/111502_SystemCode(18)/app/src/main/res/layout/activity_main_e.xml
@@ -34,6 +34,7 @@
         android:id="@+id/imageButtonToPageJE"
         android:layout_width="68dp"
         android:layout_height="69dp"
+        android:onClick="EJonClick"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.749"
@@ -47,6 +48,7 @@
         android:id="@+id/imageButtonToPageHE"
         android:layout_width="68dp"
         android:layout_height="69dp"
+        android:onClick="EHonClick"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -60,6 +62,7 @@
         android:id="@+id/imageButtonToPageAE"
         android:layout_width="68dp"
         android:layout_height="69dp"
+        android:onClick="EAonClick"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.017"
@@ -73,6 +76,7 @@
         android:id="@+id/imageButtonToPageBE"
         android:layout_width="68dp"
         android:layout_height="69dp"
+        android:onClick="EBonClick"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.25"
@@ -86,6 +90,7 @@
         android:id="@+id/imageButtonToPageOE"
         android:layout_width="68dp"
         android:layout_height="69dp"
+        android:onClick="EOonClick"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.994"
@@ -99,6 +104,7 @@
         android:id="@+id/textViewToPageBE"
         android:layout_width="49dp"
         android:layout_height="18dp"
+        android:onClick="EBonClick"
         android:text="保健區"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -111,6 +117,7 @@
         android:id="@+id/textViewToPageJE"
         android:layout_width="50dp"
         android:layout_height="15dp"
+        android:onClick="EJonClick"
         android:text="領養區"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -123,6 +130,7 @@
         android:id="@+id/textViewToPageAE"
         android:layout_width="63dp"
         android:layout_height="16dp"
+        android:onClick="EAonClick"
         android:text="動態消息"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -135,6 +143,7 @@
         android:id="@+id/textViewToPageOE"
         android:layout_width="63dp"
         android:layout_height="16dp"
+        android:onClick="EOonClick"
         android:text="個人資料"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -147,6 +156,7 @@
         android:id="@+id/textViewToPageHE"
         android:layout_width="63dp"
         android:layout_height="16dp"
+        android:onClick="EHonClick"
         android:text="殯葬服務"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
