--- a/111502_SystemCode(18)/app/src/main/res/layout/activity_main_h.xml
+++ b/111502_SystemCode(18)/app/src/main/res/layout/activity_main_h.xml
@@ -34,6 +34,7 @@
         android:id="@+id/imageButtonToPageJH"
         android:layout_width="68dp"
         android:layout_height="69dp"
+        android:onClick="HJonClick"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.749"
@@ -47,6 +48,7 @@
         android:id="@+id/imageButtonToPageOH"
         android:layout_width="68dp"
         android:layout_height="69dp"
+        android:onClick="HOonClick"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.994"
@@ -73,6 +75,7 @@
         android:id="@+id/imageButtonToPageAH"
         android:layout_width="68dp"
         android:layout_height="69dp"
+        android:onClick="HAonClick"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.017"
@@ -86,6 +89,7 @@
         android:id="@+id/imageButtonToPageBH"
         android:layout_width="68dp"
         android:layout_height="69dp"
+        android:onClick="HBonClick"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.25"
@@ -99,6 +103,7 @@
         android:id="@+id/textViewToPageBH"
         android:layout_width="49dp"
         android:layout_height="18dp"
+        android:onClick="HBonClick"
         android:text="保健區"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -111,6 +116,7 @@
         android:id="@+id/textViewToPageJH"
         android:layout_width="50dp"
         android:layout_height="15dp"
+        android:onClick="HJonClick"
         android:text="領養區"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -123,6 +129,7 @@
         android:id="@+id/textViewToPageAH"
         android:layout_width="63dp"
         android:layout_height="16dp"
+        android:onClick="HAonClick"
         android:text="動態消息"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -135,6 +142,7 @@
         android:id="@+id/textViewToPageOH"
         android:layout_width="63dp"
         android:layout_height="16dp"
+        android:onClick="HOonClick"
         android:text="個人資料"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
