--- a/111502_SystemCode(18)/app/src/main/res/layout/activity_main_j.xml
+++ b/111502_SystemCode(18)/app/src/main/res/layout/activity_main_j.xml
@@ -131,6 +131,7 @@
         android:id="@+id/imageButtonToPageOJ"
         android:layout_width="68dp"
         android:layout_height="69dp"
+        android:onClick="JOonClick"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.994"
@@ -144,6 +145,7 @@
         android:id="@+id/imageButtonToPageHJ"
         android:layout_width="68dp"
         android:layout_height="69dp"
+        android:onClick="JHonClick"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -157,6 +159,7 @@
         android:id="@+id/imageButtonToPageBJ"
         android:layout_width="68dp"
         android:layout_height="69dp"
+        android:onClick="JBonClick"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.25"
@@ -170,6 +173,7 @@
         android:id="@+id/imageButtonToPageAJ"
         android:layout_width="68dp"
         android:layout_height="69dp"
+        android:onClick="JAonClick"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.017"
@@ -183,6 +187,7 @@
         android:id="@+id/textViewToPageBJ"
         android:layout_width="49dp"
         android:layout_height="18dp"
+        android:onClick="JBonClick"
         android:text="保健區"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -207,6 +212,7 @@
         android:id="@+id/textViewToPageAJ"
         android:layout_width="63dp"
         android:layout_height="16dp"
+        android:onClick="JAonClick"
         android:text="動態消息"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -219,6 +225,7 @@
         android:id="@+id/textViewToPageOJ"
         android:layout_width="63dp"
         android:layout_height="16dp"
+        android:onClick="JOonClick"
         android:text="個人資料"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -231,6 +238,7 @@
         android:id="@+id/textViewToPageHJ"
         android:layout_width="63dp"
         android:layout_height="16dp"
+        android:onClick="JHonClick"
         android:text="殯葬服務"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
