--- a/111502_SystemCode(18)/app/src/main/res/layout/activity_main_k.xml
+++ b/111502_SystemCode(18)/app/src/main/res/layout/activity_main_k.xml
@@ -22,6 +22,7 @@
         android:id="@+id/imageButtonToPageJK"
         android:layout_width="68dp"
         android:layout_height="69dp"
+        android:onClick="KJonClick"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.749"
@@ -35,6 +36,7 @@
         android:id="@+id/imageButtonToPageOK"
         android:layout_width="68dp"
         android:layout_height="69dp"
+        android:onClick="KOonClick"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.994"
@@ -48,6 +50,7 @@
         android:id="@+id/imageButtonToPageHK"
         android:layout_width="68dp"
         android:layout_height="69dp"
+        android:onClick="KHonClick"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -61,6 +64,7 @@
         android:id="@+id/imageButtonToPageBK"
         android:layout_width="68dp"
         android:layout_height="69dp"
+        android:onClick="KBonClick"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.25"
@@ -74,6 +78,7 @@
         android:id="@+id/imageButtonToPageAK"
         android:layout_width="68dp"
         android:layout_height="69dp"
+        android:onClick="KAonClick"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.017"
@@ -87,6 +92,7 @@
         android:id="@+id/textViewToPageBK"
         android:layout_width="49dp"
         android:layout_height="18dp"
+        android:onClick="KBonClick"
         android:text="保健區"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -99,6 +105,7 @@
         android:id="@+id/textViewToPageJK"
         android:layout_width="50dp"
         android:layout_height="15dp"
+        android:onClick="KJonClick"
         android:text="領養區"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -111,6 +118,7 @@
         android:id="@+id/textViewToPageAK"
         android:layout_width="63dp"
         android:layout_height="16dp"
+        android:onClick="KAonClick"
         android:text="動態消息"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -123,6 +131,7 @@
         android:id="@+id/textViewToPageOK"
         android:layout_width="63dp"
         android:layout_height="16dp"
+        android:onClick="KOonClick"
         android:text="個人資料"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -135,6 +144,7 @@
         android:id="@+id/textViewToPageHK"
         android:layout_width="63dp"
         android:layout_height="16dp"
+        android:onClick="KHonClick"
         android:text="殯葬服務"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
