--- a/111502_SystemCode(18)/app/src/main/res/layout/activity_main_o.xml
+++ b/111502_SystemCode(18)/app/src/main/res/layout/activity_main_o.xml
@@ -22,6 +22,7 @@
         android:id="@+id/imageButtonToPageJO"
         android:layout_width="68dp"
         android:layout_height="69dp"
+        android:onClick="OJonClick"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.749"
@@ -35,6 +36,7 @@
         android:id="@+id/imageButtonToPageBO"
         android:layout_width="68dp"
         android:layout_height="69dp"
+        android:onClick="OBonClick"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.25"
@@ -61,6 +63,7 @@
         android:id="@+id/imageButtonToPageHO"
         android:layout_width="68dp"
         android:layout_height="69dp"
+        android:onClick="OHonClick"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -74,6 +77,7 @@
         android:id="@+id/imageButtonToPageAO"
         android:layout_width="68dp"
         android:layout_height="69dp"
+        android:onClick="OAonClick"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.017"
@@ -87,6 +91,7 @@
         android:id="@+id/textViewToPageHO"
         android:layout_width="63dp"
         android:layout_height="16dp"
+        android:onClick="OHonClick"
         android:text="殯葬服務"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -110,6 +115,7 @@
         android:id="@+id/textViewToPageBO"
         android:layout_width="49dp"
         android:layout_height="18dp"
+        android:onClick="OBonClick"
         android:text="保健區"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -122,6 +128,7 @@
         android:id="@+id/textViewToPageJO"
         android:layout_width="50dp"
         android:layout_height="15dp"
+        android:onClick="OJonClick"
         android:text="領養區"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -134,6 +141,7 @@
         android:id="@+id/textViewToPageAO"
         android:layout_width="63dp"
         android:layout_height="16dp"
+        android:onClick="OAonClick"
         android:text="動態消息"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
