--- a/111502_SystemCode(18)/app/src/main/res/layout/activity_main_p.xml
+++ b/111502_SystemCode(18)/app/src/main/res/layout/activity_main_p.xml
@@ -22,6 +22,7 @@
         android:id="@+id/imageButtonToPageAP"
         android:layout_width="68dp"
         android:layout_height="69dp"
+        android:onClick="PAonClick"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.017"
@@ -35,6 +36,7 @@
         android:id="@+id/imageButtonToPageHP"
         android:layout_width="68dp"
         android:layout_height="69dp"
+        android:onClick="PHonClick"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -48,6 +50,7 @@
         android:id="@+id/imageButtonToPageOP"
         android:layout_width="68dp"
         android:layout_height="69dp"
+        android:onClick="POonClick"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.994"
@@ -61,6 +64,7 @@
         android:id="@+id/imageButtonToPageJP"
         android:layout_width="68dp"
         android:layout_height="69dp"
+        android:onClick="PJonClick"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.749"
@@ -74,6 +78,7 @@
         android:id="@+id/imageButtonToPageBP"
         android:layout_width="68dp"
         android:layout_height="69dp"
+        android:onClick="PBonClick"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.25"
@@ -87,6 +92,7 @@
         android:id="@+id/textViewToPageJP"
         android:layout_width="50dp"
         android:layout_height="15dp"
+        android:onClick="PJonClick"
         android:text="領養區"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -99,6 +105,7 @@
         android:id="@+id/textViewToPageOP"
         android:layout_width="63dp"
         android:layout_height="16dp"
+        android:onClick="POonClick"
         android:text="個人資料"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -111,6 +118,7 @@
         android:id="@+id/textViewToPageBP"
         android:layout_width="49dp"
         android:layout_height="18dp"
+        android:onClick="PBonClick"
         android:text="保健區"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -123,6 +131,7 @@
         android:id="@+id/textViewToPageAP"
         android:layout_width="63dp"
         android:layout_height="16dp"
+        android:onClick="PAonClick"
         android:text="動態消息"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -135,6 +144,7 @@
         android:id="@+id/textViewToPageHP"
         android:layout_width="63dp"
         android:layout_height="16dp"
+        android:onClick="PHonClick"
         android:text="殯葬服務"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
