--- a/111502_SystemCode(18)/app/src/main/res/layout/activity_main.xml
+++ b/111502_SystemCode(18)/app/src/main/res/layout/activity_main.xml
@@ -84,7 +84,7 @@
         android:id="@+id/imageViewUserA1"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:background="#40C821"
+        android:background="#0040C821"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.091"
@@ -221,6 +221,7 @@
         android:id="@+id/imageButtonToPageJA"
         android:layout_width="68dp"
         android:layout_height="69dp"
+        android:onClick="AJonClick"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.749"
@@ -234,6 +235,7 @@
         android:id="@+id/imageButtonToPageBA"
         android:layout_width="68dp"
         android:layout_height="69dp"
+        android:onClick="ABonClick"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.25"
@@ -247,6 +249,7 @@
         android:id="@+id/imageButtonToPageHA"
         android:layout_width="68dp"
         android:layout_height="69dp"
+        android:onClick="AHonClick"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -260,6 +263,7 @@
         android:id="@+id/imageButtonToPageOA"
         android:layout_width="68dp"
         android:layout_height="69dp"
+        android:onClick="AOonClick"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.994"
@@ -286,6 +290,7 @@
         android:id="@+id/textViewToPageAA"
         android:layout_width="63dp"
         android:layout_height="16dp"
+        android:onClick="AAonClick"
         android:text="動態消息"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -298,6 +303,7 @@
         android:id="@+id/textViewToPageBA"
         android:layout_width="49dp"
         android:layout_height="18dp"
+        android:onClick="ABonClick"
         android:text="保健區"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -310,6 +316,7 @@
         android:id="@+id/textViewToPageHA"
         android:layout_width="63dp"
         android:layout_height="16dp"
+        android:onClick="AHonClick"
         android:text="殯葬服務"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -321,6 +328,7 @@
         android:id="@+id/textViewToPageJA"
         android:layout_width="50dp"
         android:layout_height="15dp"
+        android:onClick="AJonClick"
         android:text="領養區"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -333,6 +341,7 @@
         android:id="@+id/textViewToPageOA"
         android:layout_width="63dp"
         android:layout_height="16dp"
+        android:onClick="AOonClick"
         android:text="個人資料"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
