--- a/111502_SystemCode(18)/app/src/main/res/layout/activity_main_b.xml
+++ b/111502_SystemCode(18)/app/src/main/res/layout/activity_main_b.xml
@@ -22,6 +22,7 @@
         android:id="@+id/imageButtonToPageHB"
         android:layout_width="68dp"
         android:layout_height="69dp"
+        android:onClick="BHonClick"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -35,6 +36,7 @@
         android:id="@+id/imageButtonToPageAB"
         android:layout_width="68dp"
         android:layout_height="69dp"
+        android:onClick="BAonClick"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.017"
@@ -48,6 +50,7 @@
         android:id="@+id/imageButtonJB"
         android:layout_width="68dp"
         android:layout_height="69dp"
+        android:onClick="BJonClick"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.749"
@@ -61,6 +64,7 @@
         android:id="@+id/imageButtonOB"
         android:layout_width="68dp"
         android:layout_height="69dp"
+        android:onClick="BOonClick"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.994"
@@ -102,6 +106,7 @@
         android:id="@+id/textViewToPageAB"
         android:layout_width="63dp"
         android:layout_height="16dp"
+        android:onClick="BAonClick"
         android:text="動態消息"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -114,6 +119,7 @@
         android:id="@+id/textViewToPageHB"
         android:layout_width="63dp"
         android:layout_height="16dp"
+        android:onClick="BHonClick"
         android:text="殯葬服務"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -137,6 +143,7 @@
         android:id="@+id/textViewToPageJB"
         android:layout_width="50dp"
         android:layout_height="15dp"
+        android:onClick="BJonClick"
         android:text="領養區"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -149,6 +156,7 @@
         android:id="@+id/textViewToPageOB"
         android:layout_width="63dp"
         android:layout_height="16dp"
+        android:onClick="BOonClick"
         android:text="個人資料"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
