--- a/111502_SystemCode(18)/app/src/main/res/layout/activity_main_d.xml
+++ b/111502_SystemCode(18)/app/src/main/res/layout/activity_main_d.xml
@@ -34,6 +34,7 @@
         android:id="@+id/imageButtonToPageAD"
         android:layout_width="68dp"
         android:layout_height="69dp"
+        android:onClick="DAonClick"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.017"
@@ -47,6 +48,7 @@
         android:id="@+id/imageButtonToPageOD"
         android:layout_width="68dp"
         android:layout_height="69dp"
+        android:onClick="DOonClick"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.994"
@@ -60,6 +62,7 @@
         android:id="@+id/imageButtonToPageJD"
         android:layout_width="68dp"
         android:layout_height="69dp"
+        android:onClick="DJonClick"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.749"
@@ -85,6 +88,7 @@
         android:id="@+id/imageButtonToPageBD"
         android:layout_width="68dp"
         android:layout_height="69dp"
+        android:onClick="DBonClick"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.25"
@@ -98,6 +102,7 @@
         android:id="@+id/imageButtonToPageHD"
         android:layout_width="68dp"
         android:layout_height="69dp"
+        android:onClick="DHonClick"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -111,6 +116,7 @@
         android:id="@+id/textViewToPageOD"
         android:layout_width="63dp"
         android:layout_height="16dp"
+        android:onClick="DOonClick"
         android:text="個人資料"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -123,6 +129,7 @@
         android:id="@+id/textViewToPageBD"
         android:layout_width="49dp"
         android:layout_height="18dp"
+        android:onClick="DBonClick"
         android:text="保健區"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -135,6 +142,7 @@
         android:id="@+id/textViewToPageAD"
         android:layout_width="63dp"
         android:layout_height="16dp"
+        android:onClick="DAonClick"
         android:text="動態消息"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -147,6 +155,7 @@
         android:id="@+id/textViewToPageHD"
         android:layout_width="63dp"
         android:layout_height="16dp"
+        android:onClick="DHonClick"
         android:text="殯葬服務"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -158,6 +167,7 @@
         android:id="@+id/textViewToPageJD"
         android:layout_width="50dp"
         android:layout_height="15dp"
+        android:onClick="DJonClick"
         android:text="領養區"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
