--- a/111502_SystemCode(18)/app/src/main/res/layout/activity_main_f.xml
+++ b/111502_SystemCode(18)/app/src/main/res/layout/activity_main_f.xml
@@ -22,6 +22,7 @@
         android:id="@+id/imageButtonToPageJF"
         android:layout_width="68dp"
         android:layout_height="69dp"
+        android:onClick="FJonClick"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.749"
@@ -35,6 +36,7 @@
         android:id="@+id/imageButtonToPageOF"
         android:layout_width="68dp"
         android:layout_height="69dp"
+        android:onClick="FOonClick"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.994"
@@ -48,6 +50,7 @@
         android:id="@+id/imageButtonToPageHF"
         android:layout_width="68dp"
         android:layout_height="69dp"
+        android:onClick="FHonClick"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -61,6 +64,7 @@
         android:id="@+id/imageButtonToPageAF"
         android:layout_width="68dp"
         android:layout_height="69dp"
+        android:onClick="FAonClick"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.017"
@@ -74,6 +78,7 @@
         android:id="@+id/imageButtonToPageBF"
         android:layout_width="68dp"
         android:layout_height="69dp"
+        android:onClick="FBonClick"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.25"
@@ -87,6 +92,7 @@
         android:id="@+id/textViewToPageBF"
         android:layout_width="49dp"
         android:layout_height="18dp"
+        android:onClick="FBonClick"
         android:text="保健區"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -99,6 +105,7 @@
         android:id="@+id/textViewToPageJF"
         android:layout_width="50dp"
         android:layout_height="15dp"
+        android:onClick="FJonClick"
         android:text="領養區"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -111,6 +118,7 @@
         android:id="@+id/textViewToPageAF"
         android:layout_width="63dp"
         android:layout_height="16dp"
+        android:onClick="FAonClick"
         android:text="動態消息"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -123,6 +131,7 @@
         android:id="@+id/textViewToPageOF"
         android:layout_width="63dp"
         android:layout_height="16dp"
+        android:onClick="FOonClick"
         android:text="個人資料"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -135,6 +144,7 @@
         android:id="@+id/textViewToPageHF"
         android:layout_width="63dp"
         android:layout_height="16dp"
+        android:onClick="FHonClick"
         android:text="殯葬服務"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
