--- a/111502_SystemCode(18)/app/src/main/res/layout/activity_main_g.xml
+++ b/111502_SystemCode(18)/app/src/main/res/layout/activity_main_g.xml
@@ -22,6 +22,7 @@
         android:id="@+id/imageButtonToPageJG"
         android:layout_width="68dp"
         android:layout_height="69dp"
+        android:onClick="GJonClick"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.749"
@@ -35,6 +36,7 @@
         android:id="@+id/imageButtonToPageOG"
         android:layout_width="68dp"
         android:layout_height="69dp"
+        android:onClick="GOonClick"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.994"
@@ -48,6 +50,7 @@
         android:id="@+id/imageButtonToPageHG"
         android:layout_width="68dp"
         android:layout_height="69dp"
+        android:onClick="GHonClick"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -61,6 +64,7 @@
         android:id="@+id/imageButtonToPageBG"
         android:layout_width="68dp"
         android:layout_height="69dp"
+        android:onClick="GBonClick"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.25"
@@ -74,6 +78,7 @@
         android:id="@+id/imageButtonToPageAG"
         android:layout_width="68dp"
         android:layout_height="69dp"
+        android:onClick="GAonClick"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.017"
@@ -87,6 +92,7 @@
         android:id="@+id/textViewToPageBG"
         android:layout_width="49dp"
         android:layout_height="18dp"
+        android:onClick="GBonClick"
         android:text="保健區"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -99,6 +105,7 @@
         android:id="@+id/textViewToPageJG"
         android:layout_width="50dp"
         android:layout_height="15dp"
+        android:onClick="GJonClick"
         android:text="領養區"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -111,6 +118,7 @@
         android:id="@+id/textViewToPageAG"
         android:layout_width="63dp"
         android:layout_height="16dp"
+        android:onClick="GAonClick"
         android:text="動態消息"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -123,6 +131,7 @@
         android:id="@+id/textViewToPageOG"
         android:layout_width="63dp"
         android:layout_height="16dp"
+        android:onClick="GOonClick"
         android:text="個人資料"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -135,6 +144,7 @@
         android:id="@+id/textViewToPageHG"
         android:layout_width="63dp"
         android:layout_height="16dp"
+        android:onClick="GHonClick"
         android:text="殯葬服務"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
