--- a/111502_SystemCode(18)/app/src/main/res/layout/activity_main_i.xml
+++ b/111502_SystemCode(18)/app/src/main/res/layout/activity_main_i.xml
@@ -22,6 +22,7 @@
         android:id="@+id/imageButtonToPageJI"
         android:layout_width="68dp"
         android:layout_height="69dp"
+        android:onClick="IJonClick"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.749"
@@ -35,6 +36,7 @@
         android:id="@+id/imageButtonToPageOI"
         android:layout_width="68dp"
         android:layout_height="69dp"
+        android:onClick="IOonClick"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.994"
@@ -48,6 +50,7 @@
         android:id="@+id/imageButtonToPageHI"
         android:layout_width="68dp"
         android:layout_height="69dp"
+        android:onClick="IHonClick"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -61,6 +64,7 @@
         android:id="@+id/imageButtonToPageAI"
         android:layout_width="68dp"
         android:layout_height="69dp"
+        android:onClick="IAonClick"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.017"
@@ -74,6 +78,7 @@
         android:id="@+id/imageButtonToPageBI"
         android:layout_width="68dp"
         android:layout_height="69dp"
+        android:onClick="IBonClick"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.25"
@@ -87,6 +92,7 @@
         android:id="@+id/textViewToPageBI"
         android:layout_width="49dp"
         android:layout_height="18dp"
+        android:onClick="IBonClick"
         android:text="保健區"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -99,6 +105,7 @@
         android:id="@+id/textViewToPageJI"
         android:layout_width="50dp"
         android:layout_height="15dp"
+        android:onClick="IJonClick"
         android:text="領養區"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -111,6 +118,7 @@
         android:id="@+id/textViewToPageOI"
         android:layout_width="63dp"
         android:layout_height="16dp"
+        android:onClick="IOonClick"
         android:text="個人資料"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -123,6 +131,7 @@
         android:id="@+id/textViewToPageAI"
         android:layout_width="63dp"
         android:layout_height="16dp"
+        android:onClick="IAonClick"
         android:text="動態消息"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -135,6 +144,7 @@
         android:id="@+id/textViewToPageHI"
         android:layout_width="63dp"
         android:layout_height="16dp"
+        android:onClick="IHonClick"
         android:text="殯葬服務"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
