--- a/111502_SystemCode(18)/app/src/main/res/layout/activity_main_l.xml
+++ b/111502_SystemCode(18)/app/src/main/res/layout/activity_main_l.xml
@@ -42,6 +42,7 @@
             android:id="@+id/imageButtonToPageJL"
             android:layout_width="68dp"
             android:layout_height="69dp"
+            android:onClick="LJonClick"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.749"
@@ -55,6 +56,7 @@
             android:id="@+id/imageButtonToPageOL"
             android:layout_width="68dp"
             android:layout_height="69dp"
+            android:onClick="LOonClick"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.994"
@@ -81,6 +83,7 @@
             android:id="@+id/imageButtonToPageBL"
             android:layout_width="68dp"
             android:layout_height="69dp"
+            android:onClick="LBonClick"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.25"
@@ -94,6 +97,7 @@
             android:id="@+id/imageButtonToPageAL"
             android:layout_width="68dp"
             android:layout_height="69dp"
+            android:onClick="LAonClick"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.017"
@@ -107,6 +111,7 @@
             android:id="@+id/textViewToPageBL"
             android:layout_width="49dp"
             android:layout_height="18dp"
+            android:onClick="LBonClick"
             android:text="保健區"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -119,6 +124,7 @@
             android:id="@+id/textViewToPageJL"
             android:layout_width="50dp"
             android:layout_height="15dp"
+            android:onClick="LJonClick"
             android:text="領養區"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -131,6 +137,7 @@
             android:id="@+id/textViewToPageAL"
             android:layout_width="63dp"
             android:layout_height="16dp"
+            android:onClick="LAonClick"
             android:text="動態消息"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -143,6 +150,7 @@
             android:id="@+id/textViewToPageOL"
             android:layout_width="63dp"
             android:layout_height="16dp"
+            android:onClick="LOonClick"
             android:text="個人資料"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
